--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -4,3 +4,8 @@ version.workspace = true
 edition.workspace = true
 
 [dependencies]
+solarscape-shared = { path = "../shared" }
+
+anyhow.workspace = true
+thiserror.workspace = true
+tokio.workspace = true
