--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,3 +10,10 @@ version = "0.1.0"
 edition = "2021"
 
 [workspace.dependencies]
+anyhow = "1"
+async-trait = "0.1"
+bincode = "2.0.0-rc.3"
+integer-encoding = { version = "3.0.4", features = [ "tokio_async" ] }
+once_cell = "1"
+thiserror = "1"
+tokio = { version = "1", features = [ "full" ] }
