--- a/client/Cargo.toml
+++ b/client/Cargo.toml
@@ -4,3 +4,7 @@ version.workspace = true
 edition.workspace = true
 
 [dependencies]
+solarscape-shared = { path = "../shared" }
+
+anyhow.workspace = true
+tokio.workspace = true
