--- a/shared/Cargo.toml
+++ b/shared/Cargo.toml
@@ -4,3 +4,9 @@ version.workspace = true
 edition.workspace = true
 
 [dependencies]
+anyhow.workspace = true
+async-trait.workspace = true
+bincode.workspace = true
+integer-encoding.workspace = true
+once_cell.workspace = true
+tokio.workspace = true
