--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,7 +13,20 @@ edition = "2021"
 anyhow = "1"
 async-trait = "0.1"
 bincode = "2.0.0-rc.3"
-integer-encoding = { version = "3.0.4", features = [ "tokio_async" ] }
 once_cell = "1"
 thiserror = "1"
-tokio = { version = "1", features = [ "full" ] }
+
+[workspace.dependencies.integer-encoding]
+version = "3"
+features = [
+	"tokio_async"
+]
+
+[workspace.dependencies.tokio]
+version = "1"
+features = [
+	"macros",
+	"net",
+	"rt-multi-thread",
+	"sync"
+]
