give a chance for things to be properly dropped when panicking

--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -9,3 +9,4 @@ solarscape-shared = { path = "../shared" }
 anyhow.workspace = true
 thiserror.workspace = true
 tokio.workspace = true
+tokio-util.workspace = true
