--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,7 +19,7 @@ thiserror = "1"
 [workspace.dependencies.integer-encoding]
 version = "3"
 features = [
-	"tokio_async"
+	"tokio_async",
 ]
 
 [workspace.dependencies.tokio]
@@ -28,5 +28,9 @@ features = [
 	"macros",
 	"net",
 	"rt-multi-thread",
-	"sync"
+	"sync",
 ]
+
+[workspace.dependencies.tokio-util]
+version = "0.7"
+default-features = false
