--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,6 +13,7 @@ edition = "2021"
 anyhow = "1"
 async-trait = "0.1"
 bincode = "2.0.0-rc.3"
+hocon = "0.9"
 once_cell = "1"
 thiserror = "1"
 
@@ -22,6 +23,16 @@ features = [
 	"tokio_async",
 ]
 
+[workspace.dependencies.serde]
+version = "1"
+features = [
+	"derive",
+]
+
+[workspace.dependencies.tokio-util]
+version = "0.7"
+default-features = false
+
 [workspace.dependencies.tokio]
 version = "1"
 features = [
@@ -30,7 +41,3 @@ features = [
 	"rt-multi-thread",
 	"sync",
 ]
-
-[workspace.dependencies.tokio-util]
-version = "0.7"
-default-features = false
