--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -7,6 +7,8 @@ edition.workspace = true
 solarscape-shared = { path = "../shared" }
 
 anyhow.workspace = true
+hocon.workspace = true
+serde.workspace = true
 thiserror.workspace = true
-tokio.workspace = true
 tokio-util.workspace = true
+tokio.workspace = true
