--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,7 +13,9 @@ edition = "2021"
 anyhow = "1"
 async-trait = "0.1"
 bincode = "2.0.0-rc.3"
+env_logger = "0.10"
 hocon = "0.9"
+log = "0.4"
 once_cell = "1"
 thiserror = "1"
 
