Tweak the build options

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -43,3 +43,11 @@ features = [
 	"rt-multi-thread",
 	"sync",
 ]
+
+[profile.dev.package."*"]
+codegen-units = 1
+opt-level = 3
+
+[profile.release]
+codegen-units = 1
+lto = true
