Really Really Basic Early Voxjects

--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -10,6 +10,7 @@ anyhow.workspace = true
 env_logger.workspace = true
 hocon.workspace = true
 log.workspace = true
+nalgebra.workspace = true
 serde.workspace = true
 thiserror.workspace = true
 tokio-util.workspace = true
