--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,18 +12,25 @@ edition = "2021"
 [workspace.dependencies]
 anyhow = "1"
 async-trait = "0.1"
-bincode = "2.0.0-rc.3"
 env_logger = "0.10"
 hocon = "0.9"
 log = "0.4"
 once_cell = "1"
 thiserror = "1"
 
+[workspace.dependencies.bincode]
+version = "2.0.0-rc.3"
+features = [ "serde" ]
+
 [workspace.dependencies.integer-encoding]
 version = "3"
 features = [
 	"tokio_async",
 ]
+
+[workspace.dependencies.nalgebra]
+version = "0.32"
+features = [ "serde-serialize" ]
 
 [workspace.dependencies.serde]
 version = "1"
