--- a/shared/Cargo.toml
+++ b/shared/Cargo.toml
@@ -8,5 +8,6 @@ anyhow.workspace = true
 async-trait.workspace = true
 bincode.workspace = true
 integer-encoding.workspace = true
+nalgebra.workspace = true
 once_cell.workspace = true
 tokio.workspace = true
