Some io error handling improvements

--- a/shared/Cargo.toml
+++ b/shared/Cargo.toml
@@ -10,4 +10,5 @@ bincode.workspace = true
 integer-encoding.workspace = true
 nalgebra.workspace = true
 once_cell.workspace = true
+thiserror.workspace = true
 tokio.workspace = true
