--- a/shared/Cargo.toml
+++ b/shared/Cargo.toml
@@ -7,7 +7,9 @@ edition.workspace = true
 anyhow.workspace = true
 async-trait.workspace = true
 bincode.workspace = true
+env_logger.workspace = true
 integer-encoding.workspace = true
+log.workspace = true
 nalgebra.workspace = true
 once_cell.workspace = true
 thiserror.workspace = true
