Remove character disallowed by json's overly picky syntax

--- a/.github/renovate.json
+++ b/.github/renovate.json
@@ -6,7 +6,7 @@
   "packageRules": [
     {
       "matchUpdateTypes": ["major", "minor", "patch"],
-      "automerge": true,
+      "automerge": true
     }
   ],
   "platformAutomerge": true
