--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,6 +12,7 @@ edition = "2021"
 [workspace.dependencies]
 anyhow = "1"
 async-trait = "0.1"
+bytemuck = "1"
 env_logger = "0.10"
 hocon = "0.9"
 log = "0.4"
