--- a/client/Cargo.toml
+++ b/client/Cargo.toml
@@ -7,6 +7,7 @@ edition.workspace = true
 solarscape-shared = { path = "../shared" }
 
 anyhow.workspace = true
+bytemuck.workspace = true
 log.workspace = true
 nalgebra.workspace = true
 tokio.workspace = true
