--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,6 +15,7 @@ anyhow = "=1.0.75"
 async-trait = "=0.1.73"
 bytemuck = "=1.14.0"
 env_logger = "=0.10.0"
+hecs = "=0.10.3"
 hocon = "=0.9.0"
 log = "=0.4.20"
 once_cell = "=1.18.0"
