Jankily refactor client to use hecs ECS

--- a/client/Cargo.toml
+++ b/client/Cargo.toml
@@ -8,6 +8,7 @@ solarscape-shared = { path = "../shared" }
 
 anyhow.workspace = true
 bytemuck.workspace = true
+hecs.workspace = true
 log.workspace = true
 nalgebra.workspace = true
 tokio.workspace = true
