use TOML instead of HOCON for sector config

--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -6,9 +6,10 @@ edition.workspace = true
 [dependencies]
 solarscape-shared = { path = "../shared" }
 
+toml = { version = "=0.8.2", features = [ "parse" ] }
+
 anyhow.workspace = true
 hecs.workspace = true
-hocon.workspace = true
 log.workspace = true
 nalgebra.workspace = true
 serde.workspace = true
