--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,39 +12,11 @@ edition = "2021"
 
 [workspace.dependencies]
 anyhow = "=1.0.75"
-async-trait = "=0.1.73"
-bytemuck = "=1.14.0"
-env_logger = "=0.10.0"
 hecs = "=0.10.3"
 log = "=0.4.20"
-once_cell = "=1.18.0"
+nalgebra = { version = "=0.32.3", features = [ "serde-serialize" ] }
 thiserror = "=1.0.49"
-wgpu = "=0.17.1"
-winit = "=0.28.7"
-
-[workspace.dependencies.bincode]
-version = "=2.0.0-rc.3"
-features = [ "serde" ]
-
-[workspace.dependencies.nalgebra]
-version = "=0.32.3"
-features = [ "serde-serialize" ]
-
-[workspace.dependencies.serde]
-version = "=1.0.188"
-features = [
-	"derive",
-]
-
-[workspace.dependencies.tokio]
-version = "=1.33.0"
-features = [
-	"macros",
-	"io-util",
-	"net",
-	"rt-multi-thread",
-	"sync"
-]
+tokio = { version = "=1.33.0", features = [ "macros", "io-util", "net", "rt-multi-thread", "sync" ] }
 
 [profile.dev.package."*"]
 codegen-units = 1
