--- a/shared/Cargo.toml
+++ b/shared/Cargo.toml
@@ -4,12 +4,13 @@ version.workspace = true
 edition.workspace = true
 
 [dependencies]
+async-trait = "=0.1.73"
+bincode = { version = "=2.0.0-rc.3", features = [ "serde" ] }
+env_logger = "=0.10.0"
+once_cell = "=1.18.0"
+
 anyhow.workspace = true
-async-trait.workspace = true
-bincode.workspace = true
-env_logger.workspace = true
 log.workspace = true
 nalgebra.workspace = true
-once_cell.workspace = true
 thiserror.workspace = true
 tokio.workspace = true
