--- a/client/Cargo.toml
+++ b/client/Cargo.toml
@@ -8,7 +8,7 @@ solarscape-shared = { path = "../shared" }
 
 bytemuck = "=1.14.0"
 wgpu = "=0.17.1"
-winit = "=0.29.2"
+winit = { version = "=0.29.2", features = [ "rwh_05" ] }
 
 anyhow.workspace = true
 hecs.workspace = true
