--- a/.github/renovate.json
+++ b/.github/renovate.json
@@ -6,8 +6,9 @@
   "packageRules": [
     {
       "matchUpdateTypes": ["major", "minor", "patch"],
-      "automerge": true
+      "automerge": true,
+      "automergeType": "branch",
+      "automergeStrategy": "rebase"
     }
-  ],
-  "platformAutomerge": true
+  ]
 }
