--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,6 +12,7 @@ edition = "2021"
 
 [workspace.dependencies]
 anyhow = "=1.0.75"
+bincode = { version = "=2.0.0-rc.3", features = [ "serde" ] }
 hecs = "=0.10.3"
 log = "=0.4.20"
 nalgebra = { version = "=0.32.3", features = [ "serde-serialize" ] }
