--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -10,6 +10,7 @@ serde = { version = "=1.0.189", features = [ "derive" ] }
 toml = { version = "=0.8.4", features = [ "parse" ] }
 
 anyhow.workspace = true
+bincode.workspace = true
 hecs.workspace = true
 log.workspace = true
 nalgebra.workspace = true
