--- a/shared/Cargo.toml
+++ b/shared/Cargo.toml
@@ -5,11 +5,11 @@ edition.workspace = true
 
 [dependencies]
 async-trait = "=0.1.74"
-bincode = { version = "=2.0.0-rc.3", features = [ "serde" ] }
 env_logger = "=0.10.0"
 once_cell = "=1.18.0"
 
 anyhow.workspace = true
+bincode.workspace = true
 log.workspace = true
 nalgebra.workspace = true
 thiserror.workspace = true
