--- a/shared/Cargo.toml
+++ b/shared/Cargo.toml
@@ -4,9 +4,10 @@ version.workspace = true
 edition.workspace = true
 
 [dependencies]
+solarscape-macros = { path = "../macros" }
+
 async-trait = "=0.1.74"
 env_logger = "=0.10.0"
-once_cell = "=1.18.0"
 
 anyhow.workspace = true
 bincode.workspace = true
