--- a/client/Cargo.toml
+++ b/client/Cargo.toml
@@ -14,4 +14,5 @@ anyhow.workspace = true
 hecs.workspace = true
 log.workspace = true
 nalgebra.workspace = true
+thiserror.workspace = true
 tokio.workspace = true
