--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -6,8 +6,8 @@ edition.workspace = true
 [dependencies]
 solarscape-shared = { path = "../shared" }
 
+hocon = { version = "=0.9.0", features = [ "serde-support" ] }
 serde = { version = "=1.0.192", features = [ "derive" ] }
-toml = { version = "=0.8.8", features = [ "parse" ] }
 
 anyhow.workspace = true
 hecs.workspace = true
