Object Positions and LocationBuffer

--- a/server/run/server.conf
+++ b/server/run/server.conf
@@ -2,7 +2,16 @@ sectors: {
     example: {
         display_name: Example
         objects: [
-            { radius: 32 }
+            {
+                position: [ 0, 0, 0 ]
+                rotation: [ 0, 0, 0 ]
+                radius: 32
+            }
+            {
+                position: [ 0, 0, 64 ]
+                rotation: [ 0, 0, 0 ]
+                radius: 8
+            }
         ]
     }
 }
