--- a/server/run/server.conf
+++ b/server/run/server.conf
@@ -1,7 +1,7 @@
 sectors: {
     example: {
         display_name: Example
-        objects: [
+        voxel_objects: [
             {
                 position: [ 0, 0, 0 ]
                 rotation: [ 0, 0, 0 ]
