--- a/client/Cargo.toml
+++ b/client/Cargo.toml
@@ -6,6 +6,7 @@ edition.workspace = true
 [dependencies]
 solarscape-shared = { path = "../shared" }
 
+discord-rpc-client = "=0.4.0"
 bytemuck = "=1.14.0"
 wgpu = "=0.18.0"
 winit = { version = "=0.29.4", features = [ "rwh_05" ] }
