--- a/client/Cargo.toml
+++ b/client/Cargo.toml
@@ -6,9 +6,12 @@ edition.workspace = true
 [dependencies]
 solarscape-shared = { path = "../shared" }
 
-discord-rpc-client = "=0.4.0"
 bytemuck = "=1.14.0"
+discord-rpc-client = "=0.4.0"
+native-dialog = "=0.7.0"
 wgpu = "=0.18.0"
+
+clap = { version = "=4.4.8", features = [ "derive" ] }
 winit = { version = "=0.29.4", features = [ "rwh_05" ] }
 
 anyhow.workspace = true
