--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -6,6 +6,9 @@ edition.workspace = true
 [dependencies]
 solarscape-shared = { path = "../shared" }
 
+once_cell = "=1.18.0"
+paste = "=1.0.14"
+
 hocon = { version = "=0.9.0", features = [ "serde-support" ] }
 serde = { version = "=1.0.193", features = [ "derive" ] }
 
