--- a/client/Cargo.toml
+++ b/client/Cargo.toml
@@ -9,8 +9,8 @@ solarscape-shared = { path = "../shared" }
 bytemuck = "=1.14.0"
 discord-rpc-client = "=0.4.0"
 native-dialog = "=0.7.0"
-wgpu = "=0.18.0"
 
+wgpu = { version = "=0.18.0", features = [ "trace" ] }
 clap = { version = "=4.4.11", features = [ "derive" ] }
 winit = { version = "=0.29.4", features = [ "rwh_05" ] }
 
