--- a/.github/workflows/cargo.yml
+++ b/.github/workflows/cargo.yml
@@ -10,6 +10,8 @@ jobs:
         uses: actions/checkout@v4
       - name: Cache
         uses: swatinem/rust-cache@v2
+      - name: Update Dependencies
+        run: cargo update
       - name: Format Check
         run: cargo fmt --check
       - name: Build
