--- a/client/Cargo.toml
+++ b/client/Cargo.toml
@@ -12,9 +12,10 @@ solarscape-shared.workspace = true
 thiserror.workspace = true
 tokio.workspace = true
 
+bytemuck = "1"
 futures-util = "0.3"
+rand = "0.8"
 tokio-tungstenite = "0.21"
 tokio-util = "0.7"
 wgpu = { version = "0.19", default-features = false, features = ["wgsl"] }
 winit = "0.29"
-rand = "0.8.5"
