--- a/client/Cargo.toml
+++ b/client/Cargo.toml
@@ -7,15 +7,17 @@ edition.workspace = true
 anyhow.workspace = true
 bincode.workspace = true
 log.workspace = true
-nalgebra.workspace = true
 solarscape-shared.workspace = true
 thiserror.workspace = true
 tokio.workspace = true
+
+nalgebra = { workspace = true, features = ["bytemuck"] }
 
 bytemuck = "1"
 futures-util = "0.3"
 rand = "0.8"
 tokio-tungstenite = "0.21"
 tokio-util = "0.7"
-wgpu = { version = "0.19", default-features = false, features = ["wgsl"] }
 winit = "0.29"
+
+wgpu = { version = "0.19", default-features = false, features = ["wgsl"] }
