--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -15,4 +15,4 @@ tokio.workspace = true
 dashmap = "5"
 rand = "0.8"
 
-axum = { version = "0.7", default-features = false, features = ["http2", "ws"] }
+axum = { version = "0.7", default-features = false, features = ["http1", "http2", "ws"] }
