--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -14,5 +14,6 @@ tokio.workspace = true
 
 dashmap = "5"
 rand = "0.8"
+rayon = "1"
 
 axum = { version = "0.7", default-features = false, features = ["http1", "http2", "ws"] }
