--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -12,8 +12,10 @@ solarscape-shared.workspace = true
 thiserror.workspace = true
 tokio.workspace = true
 
+serde = { workspace = true, features = ["rc"] }
+
 dashmap = "5"
 rand = "0.8"
 rayon = "1"
 
-axum = { version = "0.7", default-features = false, features = ["http1", "http2", "ws"] }
+axum = { version = "0.7", default-features = false, features = ["http1", "http2", "query", "ws"] }
