--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -15,6 +15,7 @@ tokio.workspace = true
 serde = { workspace = true, features = ["rc"] }
 
 dashmap = "5"
+hocon = "0.9"
 rand = "0.8"
 rayon = "1"
 
