--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -18,5 +18,6 @@ dashmap = "6"
 hocon = "0.9"
 rand = "0.8"
 rayon = "1"
+thread-priority = "1"
 
 axum = { version = "0.7", default-features = false, features = ["http1", "http2", "query", "tokio", "ws"] }
