--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,13 +11,15 @@ solarscape-shared = { path = "shared" }
 
 anyhow = "1"
 bincode = "1"
+dashmap = "6"
 log = "0.4"
 nalgebra = "0.33"
+rayon = "1"
 thiserror = "1"
 
 chrono = { version = "0.4", default-features = false, features = ["clock"] }
 serde = { version = "1", features = ["derive"] }
-tokio = { version = "1", features = ["net", "rt-multi-thread", "sync"] }
+tokio = { version = "1", features = ["time", "net", "rt-multi-thread", "sync"] }
 
 [profile.dev.package."*"]
 codegen-units = 1
