--- a/client/Cargo.toml
+++ b/client/Cargo.toml
@@ -7,6 +7,7 @@ edition.workspace = true
 anyhow.workspace = true
 bincode.workspace = true
 dashmap.workspace = true
+env_logger.workspace = true
 log.workspace = true
 rapier3d.workspace = true
 rayon.workspace = true
