--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,5 @@
 [workspace]
-members = ["client", "server", "shared"]
+members = ["client", "gateway", "server", "shared"]
 resolver = "2"
 
 [workspace.package]
@@ -18,6 +18,7 @@ nalgebra = "0.33"
 rayon = "1"
 thiserror = "1"
 
+axum = { version = "0.7", default-features = false, features = [ "http1", "http2", "query", "tokio", "macros" ] }
 rapier3d = { version = "0.22", features = ["simd-stable"] }
 serde = { version = "1", features = ["derive"] }
 tokio = { version = "1", features = ["macros", "net", "rt-multi-thread", "sync", "time"] }
