--- a/client/Cargo.toml
+++ b/client/Cargo.toml
@@ -2,6 +2,7 @@
 name = "solarscape-client"
 version.workspace = true
 edition.workspace = true
+publish = false
 
 [dependencies]
 anyhow.workspace = true
