--- a/shared/Cargo.toml
+++ b/shared/Cargo.toml
@@ -2,6 +2,7 @@
 name = "solarscape-shared"
 version.workspace = true
 edition.workspace = true
+publish = false
 
 [dependencies]
 serde.workspace = true
