--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,5 @@
 [workspace]
-members = ["client", "gateway", "server", "shared"]
+members = [ "backend-types", "client", "gateway", "sector-server", "shared" ]
 resolver = "2"
 
 [workspace.package]
@@ -7,21 +7,24 @@ edition = "2021"
 version = "0.0.0"
 
 [workspace.dependencies]
+solarscape-backend-types = { path = "backend-types" }
 solarscape-shared = { path = "shared" }
 
 anyhow = "1"
-bincode = "1"
+chacha20poly1305 = "0.10"
 dashmap = "6"
 env_logger = "0.11"
 log = "0.4"
-nalgebra = "0.33"
 rayon = "1"
+serde_json = "1"
 thiserror = "1"
 
-axum = { version = "0.7", default-features = false, features = [ "http1", "http2", "query", "tokio", "macros" ] }
+clap = { version = "4", features = ["cargo", "derive"] }
+nalgebra = { version = "0.33", features = ["serde-serialize"] }
 rapier3d = { version = "0.22", features = ["simd-stable"] }
 serde = { version = "1", features = ["derive"] }
-tokio = { version = "1", features = ["macros", "net", "rt-multi-thread", "sync", "time"] }
+sqlx = { version = "0.8", default-features = false, features = ["macros", "postgres", "runtime-tokio"] }
+tokio = { version = "1", features = ["io-util", "macros", "net", "rt-multi-thread", "sync", "time"] }
 
 [profile.dev.package."*"]
 codegen-units = 1
