--- a/gateway/Cargo.toml
+++ b/gateway/Cargo.toml
@@ -6,16 +6,19 @@ publish = false
 
 [dependencies]
 anyhow.workspace = true
-axum.workspace = true
+chacha20poly1305.workspace = true
+clap.workspace = true
 env_logger.workspace = true
 log.workspace = true
+serde_json.workspace = true
 serde.workspace = true
+solarscape-backend-types.workspace = true
+sqlx.workspace = true
 thiserror.workspace = true
 tokio.workspace = true
 
 email_address = "0.2"
+itertools = "0.13"
 
 argon2 = { version = "0.5", features = ["std"] }
-clap = { version = "4", features = ["cargo", "derive"] }
-sqlx = { version = "0.8", default-features = false, features = ["macros", "postgres", "runtime-tokio"] }
-time = { version = "0.3", features = ["macros"] }
+axum = { version = "0.7", default-features = false, features = ["http1", "http2", "json", "macros", "query", "tokio"] }
