--- a/shared/Cargo.toml
+++ b/shared/Cargo.toml
@@ -5,8 +5,12 @@ edition.workspace = true
 publish = false
 
 [dependencies]
+chacha20poly1305.workspace = true
+log.workspace = true
+nalgebra.workspace = true
 serde.workspace = true
+thiserror.workspace = true
+tokio.workspace = true
 
-nalgebra = { workspace = true, features = ["serde-serialize"] }
-
+bincode = "1"
 serde_with = "3"
