--- a/sector-server/Cargo.toml
+++ b/sector-server/Cargo.toml
@@ -3,6 +3,7 @@ name = "solarscape-sector-server"
 version.workspace = true
 edition.workspace = true
 publish = false
+build = "../build.rs"
 
 [dependencies]
 anyhow.workspace = true
