--- a/shared/Cargo.toml
+++ b/shared/Cargo.toml
@@ -3,6 +3,7 @@ name = "solarscape-shared"
 version.workspace = true
 edition.workspace = true
 publish = false
+build = "../build.rs"
 
 [dependencies]
 chacha20poly1305.workspace = true
