--- a/.github/renovate.json
+++ b/.github/renovate.json
@@ -10,6 +10,10 @@
 			"automergeStrategy": "rebase",
 			"automergeType": "branch",
 			"matchCurrentVersion": "!/^0/",
+			"matchFileNames": [
+				"Cargo.toml",
+				"*/Cargo.toml"
+			],
 			"matchUpdateTypes": [
 				"major"
 			]
@@ -19,13 +23,14 @@
 			"automergeStrategy": "rebase",
 			"automergeType": "branch",
 			"matchCurrentVersion": "/^0/",
+			"matchFileNames": [
+				"Cargo.toml",
+				"*/Cargo.toml"
+			],
 			"matchUpdateTypes": [
 				"major",
 				"minor"
 			]
 		}
-	],
-	"lockFileMaintenance": {
-		"enabled": false
-	}
+	]
 }
