--- a/sector-server/Cargo.toml
+++ b/sector-server/Cargo.toml
@@ -18,10 +18,11 @@ rayon.workspace = true
 serde_json.workspace = true
 serde.workspace = true
 solarscape-backend-types.workspace = true
-solarscape-shared.workspace = true
 sqlx.workspace = true
 thiserror.workspace = true
 tokio.workspace = true
+
+solarscape-shared = { workspace = true, features = ["server"] }
 
 futures = "0.3"
 hocon = "0.9"
