--- a/gateway/Cargo.toml
+++ b/gateway/Cargo.toml
@@ -13,10 +13,11 @@ env_logger.workspace = true
 log.workspace = true
 serde_json.workspace = true
 serde.workspace = true
-solarscape-backend-types.workspace = true
 sqlx.workspace = true
 thiserror.workspace = true
 tokio.workspace = true
+
+solarscape-shared = { workspace = true, features = ["backend"] }
 
 email_address = "0.2"
 itertools = "0.13"
