Render Structure Blocks

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,6 +2,7 @@
 	"cSpell.words": [
 		"barebones",
 		"bincode",
+		"blockbench",
 		"bytemuck",
 		"cachix",
 		"chacha",
@@ -22,10 +23,12 @@
 		"itertools",
 		"keybind",
 		"lmao",
+		"mtllib",
 		"multibody",
 		"multisample",
 		"multisampled",
 		"multiview",
+		"newmtl",
 		"nixpkgs",
 		"pipestatus",
 		"repr",
@@ -38,6 +41,8 @@
 		"sqlx",
 		"srgb",
 		"swatinem",
+		"texcoords",
+		"tobj",
 		"tostring",
 		"trimesh",
 		"unclipped",
@@ -45,6 +50,7 @@
 		"uplevel",
 		"upleveled",
 		"upleveling",
+		"usemtl",
 		"voxject",
 		"voxjects",
 		"vsync",
