--- a/client/Cargo.toml
+++ b/client/Cargo.toml
@@ -14,6 +14,7 @@ env_logger.workspace = true
 log.workspace = true
 rapier3d.workspace = true
 rayon.workspace = true
+rustc-hash.workspace = true
 serde_json.workspace = true
 serde.workspace = true
 thiserror.workspace = true
