--- a/sector-server/Cargo.toml
+++ b/sector-server/Cargo.toml
@@ -15,6 +15,7 @@ log.workspace = true
 nalgebra.workspace = true
 rapier3d.workspace = true
 rayon.workspace = true
+rustc-hash.workspace = true
 serde_json.workspace = true
 serde.workspace = true
 sqlx.workspace = true
