--- a/shared/Cargo.toml
+++ b/shared/Cargo.toml
@@ -9,6 +9,7 @@ build = "../build.rs"
 chacha20poly1305.workspace = true
 log.workspace = true
 nalgebra.workspace = true
+rustc-hash.workspace = true
 serde.workspace = true
 thiserror.workspace = true
 tokio.workspace = true
